# rust-camel

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.prod  LICENSE  README.md  dev.sh  docker-compose.yml
src/: lib.rs  main.rs
src/application/: mod.rs  pipeline.rs
src/application/processors/: enricher.rs  filter.rs  logging.rs  mod.rs  transform.rs
src/application/services/: message_service.rs
src/domain/: mod.rs
src/domain/models/: error.rs  exchange.rs  mod.rs
src/domain/ports/: mod.rs  processor.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: message_repository.rs
src/interfaces/: mod.rs
src/interfaces/api/: health.rs  mod.rs  rest.rs
src/tests/: integration_test.rs  mod.rs
src/tests/api/: health_test.rs  message_test.rs  mod.rs
src/tests/helpers/: mod.rs
