[package]
name = "rust-camel"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_camel"
path = "src/lib.rs"

[[bin]]
name = "rust-camel"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# Update uuid dependency to include serde feature
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }